fit_predictor/mkp_aco/evaluates/coevolve/run3/2025-01-16_21-58-24/problem_iter2_response10.txt_stdout.txt
Traceback (most recent call last):
  File "/home/lars/workspace/COP/reevo_2/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "/home/lars/workspace/COP/reevo_2/problems/mkp_aco/gpt.py", line 18
    noise = np.random.normal scale=0.1 * weight.sum(axis=1)
                             ^^^^^
SyntaxError: invalid syntax
